YV - Header partial, logo and navigation finished

--- a/index.html
+++ b/index.html
@@ -6,13 +6,36 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="css/font-awesome.min.css">
+    <link href="https://fonts.googleapis.com/css?family=Kanit:300,400,500,700|Saira:300,400,500,700" rel="stylesheet">
     <link rel="stylesheet" href="css/main.css">
     <title>DJ-Tiestos</title>
 </head>
 <body>
-    <div class="d-flex justify-content-center align-items-center h-100">
-        <h1>DJ-Tiesto</h1>
-    </div>
+    <header class="header">
+        <div class="container pt-1 pt-md-5">
+            <nav class="navbar navbar-expand-lg">
+                <a class="navbar-brand" href="index.html">
+                    <img class="img-fluid" src="img/logo-wp-festival.png" alt="WP Music Festival">
+                </a>
+                <button class="navbar-toggler custom-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup"
+                    aria-expanded="false" aria-label="Toggle navigation">
+                    <span> </span>
+                    <span> </span>
+                    <span> </span>
+                </button>
+                <div class="collapse navbar-collapse justify-content-end" id="navbarNavAltMarkup">
+                    <div class="navbar-nav text-center">
+                        <a class="nav-item nav-link active" href="#">WP Festival <span class="sr-only">(current)</span></a>
+                        <a class="nav-item nav-link" href="#">DJS</a>
+                        <a class="nav-item nav-link" href="#">Presentaciones</a>
+                        <a class="nav-item nav-link" href="#">Blog</a>
+                        <a class="nav-item nav-link" href="#">Contacto</a>
+                    </div>
+                </div>
+            </nav>
+        </div>
+
+    </header>
 
 
     <script src="js/jquery.min.js"></script>
