YV - Header finished beta

--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
 </head>
 <body>
     <header class="header">
-        <div class="container pt-1 pt-md-5">
+        <div class="container pt-1 pt-md-4 header__top">
             <nav class="navbar navbar-expand-lg">
                 <a class="navbar-brand" href="index.html">
                     <img class="img-fluid" src="img/logo-wp-festival.png" alt="WP Music Festival">
                 </a>
-                <button class="navbar-toggler custom-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup"
+                <button class="navbar-toggler js-custom-toggler custom-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup"
                     aria-expanded="false" aria-label="Toggle navigation">
                     <span> </span>
                     <span> </span>
@@ -34,12 +34,38 @@
                 </div>
             </nav>
         </div>
-
+        <div class="container header__bottom">
+            <ul class="header__meta list-inline d-flex">
+                <li><img src="img/icon_date.png" alt="21 Sept 2018"> 21 Sept 2018</li>
+                <li><img src="img/icon_headphones.png" alt="24 Djs"> 24 Djs</li>
+                <li><img src="img/icon_ticket.png" alt="3000 Entradas"> 3000 Entradas</li>
+            </ul>
+            <div class="header__information mt-5 mt-md-0 ">
+                <h2>
+                    <strong>WP</strong> Festival Music <strong>Bogotá</strong> 2018
+                </h2>
+                <p class="mb-0 mt-4 mt-md-0 pl-3 pr-3 p-md-0">Bogotá <strong>WP Festival Music</strong> es un Evento de música electrónica con Djs que estan dentro del Top 20 en el mundo.
+                </p>
+                <p class="d-none d-md-block mt-0">Luces, buena música y los mejores Djs.</p>
+                <div class="header__btn">
+                    <a href="#" class="btn btn-primary mt-5 mt-md-3">Comprar Tickets</a>
+                </div>
+            </div>            
+        </div>
     </header>
 
 
     <script src="js/jquery.min.js"></script>
     <script src="js/popper.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
+    <script>
+        $(document).ready(function () {
+            $('[data-target="#navbarNavAltMarkup"]').click(function () {
+                
+                $('.navbar-expand-lg').toggleClass('relative');
+                $('.collapse').addClass('navbar-absolute');
+            });
+        });
+    </script>
 </body>
 </html>
