YV - Header Finished Version Final

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 <li><img src="img/icon_headphones.png" alt="24 Djs"> 24 Djs</li>
                 <li><img src="img/icon_ticket.png" alt="3000 Entradas"> 3000 Entradas</li>
             </ul>
-            <div class="header__information mt-5 mt-md-0 ">
+            <div class="header__information">
                 <h2>
                     <strong>WP</strong> Festival Music <strong>Bogotá</strong> 2018
                 </h2>
