--- a/index.html
+++ b/index.html
@@ -48,11 +48,90 @@
                 </p>
                 <p class="d-none d-md-block mt-0">Luces, buena música y los mejores Djs.</p>
                 <div class="header__btn">
-                    <a href="#" class="btn btn-primary mt-5 mt-md-3">Comprar Tickets</a>
+                    <a href="#" class="btn btn-primary btn-lg mt-5 mt-md-3">Comprar Tickets</a>
                 </div>
             </div>            
         </div>
-    </header>
+    </header> <!--Header-->
+    <main class="main">
+        <section class="presentations sectionBorder">
+            <article class="container">
+                <h2 class="title title--white">Presentaciones</h2>
+                <p>Aquí encontrarás los detalles de las presentaciones horarios, djs, escenario y la posibilidad de comprar tickets</p>
+                <div class="presentations__details row mt-5">
+                    <div class="presentations__details--title col">Hora</div>
+                    <div class="presentations__details--title col">DJ</div>
+                    <div class="presentations__details--title col d-none d-lg-block"></div>
+                    <div class="presentations__details--title col d-none d-lg-block">Escenario</div>
+                    <div class="presentations__details--title col mr-3">Ticket</div>
+                </div> <!--Titulo de las presentaciones-->
+                <div class="presentations__details row align-items-center mt-3">
+                    <div class="presentations__details--information col">22:00</div>
+                    <div class="presentations__details--information col">Dj Monza</div>
+                    <div class="presentations__details--information col d-none d-lg-block">
+                        <img class="img-fluid" src="img/dj-kuramizagui-presentations.png" alt="Dj Kuramizagui" width="150" height="164">
+                    </div>
+                    <div class="presentations__details--information col d-none d-lg-block">Principal</div>
+                    <div class="presentations__details--information col d-flex ">
+                        <a class="btn btn-primary  mr-3 d-none d-lg-block" href="#">Detalles</a>
+                        <a class="btn btn-primary" href="#">Tickets</a>
+                    </div>
+                </div> <!--Descripción presentaciones-->
+                <div class="presentations__details row align-items-center mt-3">
+                    <div class="presentations__details--information col">23:00</div>
+                    <div class="presentations__details--information col">Kura</div>
+                    <div class="presentations__details--information col d-none d-lg-block">
+                        <img class="img-fluid" src="img/dj-kura-presentations.png" alt="Dj Kura" width="150" height="164">
+                    </div>
+                    <div class="presentations__details--information col d-none d-lg-block">Principal</div>
+                    <div class="presentations__details--information col d-flex ">
+                        <a class="btn btn-primary mr-3 d-none d-lg-block" href="#">Detalles</a>
+                        <a class="btn btn-primary" href="#">Tickets</a>
+                    </div>
+                </div> <!--Descripción presentaciones-->
+                <div class="presentations__details row align-items-center mt-3">
+                    <div class="presentations__details--information col">22:00</div>
+                    <div class="presentations__details--information col">Dj Monza</div>
+                    <div class="presentations__details--information col d-none d-lg-block">
+                        <img class="img-fluid" src="img/dj-monza-presentations.png" alt="Dj Monza" width="150" height="164">
+                    </div>
+                    <div class="presentations__details--information col d-none d-lg-block">Principal</div>
+                    <div class="presentations__details--information col d-flex ">
+                        <a class="btn btn-primary mr-3 d-none d-lg-block" href="#">Detalles</a>
+                        <a class="btn btn-primary" href="#">Tickets</a>
+                    </div>
+                </div> <!--Descripción presentaciones-->
+                <div class="presentations__details row align-items-center mt-3">
+                    <div class="presentations__details--information col">22:00</div>
+                    <div class="presentations__details--information col">Dj Torino</div>
+                    <div class="presentations__details--information col d-none d-lg-block">
+                        <img class="img-fluid" src="img/dj-torino-presentations.png" alt="Dj Torino" width="150" height="164">
+                    </div>
+                    <div class="presentations__details--information col d-none d-lg-block">Principal</div>
+                    <div class="presentations__details--information col d-flex ">
+                        <a class="btn btn-primary mr-3 d-none d-lg-block" href="#">Detalles</a>
+                        <a class="btn btn-primary" href="#">Tickets</a>
+                    </div>
+                </div> <!--Descripción presentaciones-->
+                <div class="presentations__details row align-items-center mt-3">
+                    <div class="presentations__details--information col">22:00</div>
+                    <div class="presentations__details--information col">Dj Yan</div>
+                    <div class="presentations__details--information col d-none d-lg-block">
+                        <img class="img-fluid" src="img/dj-yan-presentations.png" alt="Dj Yan" width="150" height="164">
+                    </div>
+                    <div class="presentations__details--information col d-none d-lg-block">Principal</div>
+                    <div class="presentations__details--information col d-flex ">
+                        <a class="btn btn-primary mr-3 d-none d-lg-block" href="#">Detalles</a>
+                        <a class="btn btn-primary" href="#">Tickets</a>
+                    </div>
+                </div> <!--Descripción presentaciones-->
+                <div class="row justify-content-center mt-5">
+                    <a class="btn btn-primary btn-lg" href="#" id="">Ver Todas</a>
+                </div>
+            </article>
+        </section>
+    </main>
+    
 
 
     <script src="js/jquery.min.js"></script>
