YV - Number Events finished Beta

--- a/index.html
+++ b/index.html
@@ -129,6 +129,32 @@
                     <a class="btn btn-primary btn-lg" href="#" id="">Ver Todas</a>
                 </div>
             </article>
+        </section> <!--End Presentaciones-->
+        <section class="numberEvents d-none d-lg-block">
+            <div class="container">
+                <article class="row justify-content-between align-items-center">
+                    <div class="numberEvents__item">
+                        <img src="img/icon_lights.png" alt="2000 Luces Increibles">
+                        <h6>2000</h6>
+                        <h5>Luces Increibles</h5>
+                    </div>
+                    <div class="numberEvents__item">
+                        <img src="img/icon_djs.png" alt="12 Djs Top Mundial">
+                        <h6>12</h6>
+                        <h5>Djs Top Mundial</h5>
+                    </div>
+                    <div class="numberEvents__item">
+                        <img src="img/icon_music_hours.png" alt="1000 Horas de Música">
+                        <h6>1000</h6>
+                        <h5>Horas de Música</h5>
+                    </div>
+                    <div class="numberEvents__item">
+                        <img src="img/icon_assistens.png" alt="10000 Asistentes">
+                        <h6>10000</h6>
+                        <h5>Asistentes</h5>
+                    </div>
+                </article>
+            </div>
         </section>
     </main>
     
