YV - Section Gallery Beta

--- a/index.html
+++ b/index.html
@@ -310,7 +310,7 @@
                     </div>
                 </div>
             </article>
-        </section>
+        </section> <!--End Tickets-->
         <section class="sponsors">
             <div class="container">
                 <h2 class="title title--white title--small text-md-right">Patrocinadores</h2>
@@ -337,6 +337,68 @@
                    </div>
                 </div>
             </div>
+        </section> <!--End Sponsors-->
+        <section class="gallery position-relative">
+            <article class="container sectionBorder--top">
+                <h2 class="title title--black">Galeria de imagenes</h2>
+                <p>Fotografias evento del año anterior Medellín 2017</p>
+                <div class="row mt-5">
+                    <div class="col-6 col-md-4 p-0">
+                        <figure class="gallery__animation">
+                            <img class="img-fluid" src="img/gallery_brasil.png" alt="Galeria">
+                            <figcaption >
+                                <h4>WP Festival Músic</h4>
+                                <h6>Headless 2017</h6>
+                            </figcaption>
+                        </figure>
+                    </div>
+                    <div class="col-6 col-md-4 p-0">
+                        <figure class="gallery__animation">
+                            <img class="img-fluid" src="img/gallery_colombia.png" alt="Galeria">
+                            <figcaption>
+                                <h4>WP Festival Músic</h4>
+                                <h6>Headless 2017</h6>
+                            </figcaption>
+                        </figure>
+                    </div>
+                    <div class="col-6 col-md-4 p-0">
+                        <figure class="gallery__animation">
+                            <img class="img-fluid" src="img/gallery_fabricio.png" alt="Galeria">
+                            <figcaption>
+                                <h4>WP Festival Músic</h4>
+                                <h6>Headless 2017</h6>
+                            </figcaption>
+                        </figure>
+                    </div>
+                    <div class="col-6 col-md-4 p-0">
+                       <figure class="gallery__animation">
+                            <img class="img-fluid" src="img/gallery_dj.png" alt="Galeria">
+                            <figcaption>
+                                <h4>WP Festival Músic</h4>
+                                <h6>Headless 2017</h6>
+                            </figcaption>
+                       </figure>
+                    </div>
+                    <div class="col-6 col-md-4 p-0">
+                        <figure class="gallery__animation">
+                            <img class="img-fluid" src="img/gallery_francia.png" alt="Galeria">
+                            <figcaption>
+                                <h4>WP Festival Músic</h4>
+                                <h6>Headless 2017</h6>
+                            </figcaption>
+                        </figure>
+                    </div>
+                    <div class="col-6 col-md-4 p-0">
+                        <figure class="gallery__animation">
+                            <img class="img-fluid" src="img/gallery_tomorroland.png" alt="Galeria">
+                            <figcaption>
+                                <h4>WP Festival Músic</h4>
+                                <h6>Headless 2017</h6>
+                            </figcaption>
+                        </figure>
+                    </div>
+                </div>
+            </article>
         </section>
     </main>
     <script src="js/jquery.min.js"></script>
