YV - Section News Beta

--- a/index.html
+++ b/index.html
@@ -338,7 +338,7 @@
                 </div>
             </div>
         </section> <!--End Sponsors-->
-        <section class="gallery position-relative">
+        <section class="gallery pb-0 position-relative">
             <article class="container sectionBorder--top">
                 <h2 class="title title--black">Galeria de imagenes</h2>
                 <p>Fotografias evento del año anterior Medellín 2017</p>
@@ -399,7 +399,40 @@
                     </div>
                 </div>
             </article>
-        </section>
+        </section> <!--End Gallery-->
+        <section class="news">
+            <article class="container">
+                <h2 class="title title--white title--small text-md-right">Noticias</h2>
+                <div class="row mt-5">
+                    <div class="col-6">
+                        <div class="news__item">
+                            <figure>
+                                <img class="img-fluid" src="img/news_brasil.png" alt="Brasil">
+                                <figcaption>Categoría - Sep 5</figcaption>
+                            </figure>
+                            <h2>Disponible la primera preventa</h2>
+                            <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum.</p>
+                        </div>
+                    </div>
+                    <div class="col-5 offset-1 news__item--right">
+                        <div class="news__item">
+                            <figure>
+                                <img class="img-fluid" src="img/news_colombia.png" alt="Brasil">
+                                <figcaption>Categoría - Sep 5</figcaption>
+                            </figure>
+                            <h2>Disponible la primera preventa</h2>
+                        </div>
+                        <div class="news__item">
+                            <figure>
+                                <img class="img-fluid" src="img/news_alexio.png" alt="Brasil">
+                                <figcaption>Categoría - Sep 5</figcaption>
+                            </figure>
+                            <h2>Disponible la primera preventa</h2>
+                        </div>
+                    </div>
+                </div>
+            </article>
+        </section><!--End News-->
     </main>
     <script src="js/jquery.min.js"></script>
     <script src="js/popper.min.js"></script>
