YV - Footer Beta

--- a/index.html
+++ b/index.html
@@ -434,6 +434,43 @@
             </article>
         </section><!--End News-->
     </main>
+    <footer class="footer">
+        <div class="container">
+            <div class="row">
+                <div class="col-12 col-lg-6 pl-0 pt-5 pt-md-0 pb-5 pb-md-0 pr-3 d-flex flex-column justify-content-center">
+                    <h5>WP FESTIVAL MUSIC - Bogotá</h5>
+                    <p class="d-none d-md-block">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum.</p>
+                    <ul class="list-unstyled d-flex mt-3 justify-content-center justify-content-lg-start pl-3 pl-lg-0">
+                        <li class="mr-4">
+                            <a href="#">
+                                <img src="img/icon_twitter.png" alt="">
+                            </a>
+                        </li>
+                        <li class="mr-4">
+                            <a href="#">
+                                <img src="img/icon_facebook.png" alt="">
+                            </a>
+                        </li>
+                        <li class="mr-4">
+                            <a href="#">
+                                <img src="img/icon_instagram.png" alt="">
+                            </a>
+                        </li>
+                    </ul>
+                    <ul class="list-unstyled d-flex mt-3 footer__nav flex-wrap justify-content-center justify-content-lg-start pl-3 pl-lg-0">
+                        <li class="mr-3"><a href="#">Wp Festival</a></li>
+                        <li class="mr-3"><a href="#">DJS</a></li>
+                        <li class="mr-3"><a href="#">Presentaciones</a></li>
+                        <li class="mr-3"><a href="#">Blog</a></li>
+                        <li class="mr-3"><a href="#">Contacto</a></li>
+                    </ul>
+                </div>
+                <div class="d-none d-lg-block col-md-6">
+                    <img class="img-fluid" src="img/mapa.png" alt="Mapa de Google">
+                </div>
+            </div>
+        </div>
+    </footer>
     <script src="js/jquery.min.js"></script>
     <script src="js/popper.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
