--- a/index.html
+++ b/index.html
@@ -63,68 +63,68 @@
                 <h2 class="title title--white">Presentaciones</h2>
                 <p>Aquí encontrarás los detalles de las presentaciones horarios, djs, escenario y la posibilidad de comprar tickets</p>
                 <div class="presentations__details row mt-5">
-                    <div class="presentations__details--title col">Hora</div>
-                    <div class="presentations__details--title col">DJ</div>
-                    <div class="presentations__details--title col d-none d-lg-block"></div>
-                    <div class="presentations__details--title col d-none d-lg-block">Escenario</div>
-                    <div class="presentations__details--title col mr-3">Ticket</div>
+                    <div class="presentations__details--title col col-md-2">Hora</div>
+                    <div class="presentations__details--title col col-md-2">DJ</div>
+                    <div class="presentations__details--title col col-md-3 d-none d-lg-block"></div>
+                    <div class="presentations__details--title col col-md-2 d-none d-lg-block">Escenario</div>
+                    <div class="presentations__details--title col col-md-3">Ticket</div>
                 </div> <!--Titulo de las presentaciones-->
                 <div class="presentations__details row align-items-center mt-3">
-                    <div class="presentations__details--information col">22:00</div>
-                    <div class="presentations__details--information col">Dj Monza</div>
-                    <div class="presentations__details--information col d-none d-lg-block">
-                        <img class="img-fluid" src="img/dj-kuramizagui-presentations.png" alt="Dj Kuramizagui" width="150" height="164">
+                    <div class="presentations__details--information col col-md-2">22:00</div>
+                    <div class="presentations__details--information col col-md-2">Dj Monza</div>
+                    <div class="presentations__details--information col col-md-3 d-none d-lg-block">
+                        <img class="img-fluid" src="img/dj-kuramizagui-presentations.png" alt="Dj Kuramizagui" width="130" height="144">
                     </div>
-                    <div class="presentations__details--information col d-none d-lg-block">Principal</div>
-                    <div class="presentations__details--information col d-flex ">
+                    <div class="presentations__details--information col col-md-2 d-none d-lg-block">Principal</div>
+                    <div class="presentations__details--information col col-md-3 d-flex">
                         <a class="btn btn-primary  mr-3 d-none d-lg-block" href="#">Detalles</a>
                         <a class="btn btn-primary" href="#">Tickets</a>
                     </div>
                 </div> <!--Descripción presentaciones-->
                 <div class="presentations__details row align-items-center mt-3">
-                    <div class="presentations__details--information col">23:00</div>
-                    <div class="presentations__details--information col">Kura</div>
-                    <div class="presentations__details--information col d-none d-lg-block">
-                        <img class="img-fluid" src="img/dj-kura-presentations.png" alt="Dj Kura" width="150" height="164">
+                    <div class="presentations__details--information col col-md-2">23:00</div>
+                    <div class="presentations__details--information col col-md-2">Kura</div>
+                    <div class="presentations__details--information col col-md-3 d-none d-lg-block">
+                        <img class="img-fluid" src="img/dj-kura-presentations.png" alt="Dj Kura" width="130" height="144">
                     </div>
-                    <div class="presentations__details--information col d-none d-lg-block">Principal</div>
-                    <div class="presentations__details--information col d-flex ">
+                    <div class="presentations__details--information col col-md-2 d-none d-lg-block">Principal</div>
+                    <div class="presentations__details--information col col-md-3 d-flex ">
                         <a class="btn btn-primary mr-3 d-none d-lg-block" href="#">Detalles</a>
                         <a class="btn btn-primary" href="#">Tickets</a>
                     </div>
                 </div> <!--Descripción presentaciones-->
                 <div class="presentations__details row align-items-center mt-3">
-                    <div class="presentations__details--information col">22:00</div>
-                    <div class="presentations__details--information col">Dj Monza</div>
-                    <div class="presentations__details--information col d-none d-lg-block">
-                        <img class="img-fluid" src="img/dj-monza-presentations.png" alt="Dj Monza" width="150" height="164">
+                    <div class="presentations__details--information col col-md-2">22:00</div>
+                    <div class="presentations__details--information col col-md-2">Dj Monza</div>
+                    <div class="presentations__details--information col col-md-3 d-none d-lg-block">
+                        <img class="img-fluid" src="img/dj-monza-presentations.png" alt="Dj Monza" width="130" height="144">
                     </div>
-                    <div class="presentations__details--information col d-none d-lg-block">Principal</div>
-                    <div class="presentations__details--information col d-flex ">
+                    <div class="presentations__details--information col col-md-2 d-none d-lg-block">Principal</div>
+                    <div class="presentations__details--information col col-md-3 d-flex ">
                         <a class="btn btn-primary mr-3 d-none d-lg-block" href="#">Detalles</a>
                         <a class="btn btn-primary" href="#">Tickets</a>
                     </div>
                 </div> <!--Descripción presentaciones-->
                 <div class="presentations__details row align-items-center mt-3">
-                    <div class="presentations__details--information col">22:00</div>
-                    <div class="presentations__details--information col">Dj Torino</div>
-                    <div class="presentations__details--information col d-none d-lg-block">
-                        <img class="img-fluid" src="img/dj-torino-presentations.png" alt="Dj Torino" width="150" height="164">
+                    <div class="presentations__details--information col col-md-2">22:00</div>
+                    <div class="presentations__details--information col col-md-2">Dj Torino</div>
+                    <div class="presentations__details--information col col-md-3 d-none d-lg-block">
+                        <img class="img-fluid" src="img/dj-torino-presentations.png" alt="Dj Torino" width="130" height="144">
                     </div>
-                    <div class="presentations__details--information col d-none d-lg-block">Principal</div>
-                    <div class="presentations__details--information col d-flex ">
+                    <div class="presentations__details--information col col-md-2 d-none d-lg-block">Principal</div>
+                    <div class="presentations__details--information col col-md-3 d-flex ">
                         <a class="btn btn-primary mr-3 d-none d-lg-block" href="#">Detalles</a>
                         <a class="btn btn-primary" href="#">Tickets</a>
                     </div>
                 </div> <!--Descripción presentaciones-->
                 <div class="presentations__details row align-items-center mt-3">
-                    <div class="presentations__details--information col">22:00</div>
-                    <div class="presentations__details--information col">Dj Yan</div>
-                    <div class="presentations__details--information col d-none d-lg-block">
-                        <img class="img-fluid" src="img/dj-yan-presentations.png" alt="Dj Yan" width="150" height="164">
+                    <div class="presentations__details--information col col-md-2">22:00</div>
+                    <div class="presentations__details--information col col-md-2">Dj Yan</div>
+                    <div class="presentations__details--information col col-md-3 d-none d-lg-block">
+                        <img class="img-fluid" src="img/dj-yan-presentations.png" alt="Dj Yan" width="130" height="144">
                     </div>
-                    <div class="presentations__details--information col d-none d-lg-block">Principal</div>
-                    <div class="presentations__details--information col d-flex ">
+                    <div class="presentations__details--information col col-md-2 d-none d-lg-block">Principal</div>
+                    <div class="presentations__details--information col col-md-3 d-flex ">
                         <a class="btn btn-primary mr-3 d-none d-lg-block" href="#">Detalles</a>
                         <a class="btn btn-primary" href="#">Tickets</a>
                     </div>
@@ -260,7 +260,7 @@
                 <h2 class="title title--white">Tickets</h2>
                 <p class="subtitle">Tenemos varias opciones para todos los gustos, consigue una que se adapte a ti.</p>
                 <div class="row">
-                    <div class="col tickets__price ml-md-0">
+                    <div class="col tickets__price ml-lg-0">
                         <ul class="list-unstyled d-flex justify-content-center tickets__value">
                             <li><img alt="" src="img/icon_tickets.png"></li>
                         </ul>
@@ -290,7 +290,7 @@
                         </ul>
                         <a href="#" id="" class="btn btn-primary">Comprar</a>
                     </div>
-                    <div class="col tickets__price mr-md-0">
+                    <div class="col tickets__price mr-lg-0">
                         <ul class="list-unstyled d-flex justify-content-center tickets__value">
                             <li><img alt="" src="img/icon_tickets.png"></li>
                             <li><img alt="" src="img/icon_tickets.png"></li>
@@ -339,14 +339,16 @@
             </div>
         </section> <!--End Sponsors-->
         <section class="gallery pb-0 position-relative">
-            <article class="container sectionBorder--top">
+            <header class="container sectionBorder--top">
                 <h2 class="title title--black">Galeria de imagenes</h2>
                 <p>Fotografias evento del año anterior Medellín 2017</p>
+            </header>
+            <article class="container-fluid">
                 <div class="row mt-5">
                     <div class="col-6 col-md-4 p-0">
                         <figure class="gallery__animation">
                             <img class="img-fluid" src="img/gallery_brasil.png" alt="Galeria">
-                            <figcaption >
+                            <figcaption>
                                 <h4>WP Festival Músic</h4>
                                 <h6>Headless 2017</h6>
                             </figcaption>
@@ -371,13 +373,13 @@
                         </figure>
                     </div>
                     <div class="col-6 col-md-4 p-0">
-                       <figure class="gallery__animation">
+                        <figure class="gallery__animation">
                             <img class="img-fluid" src="img/gallery_dj.png" alt="Galeria">
                             <figcaption>
                                 <h4>WP Festival Músic</h4>
                                 <h6>Headless 2017</h6>
                             </figcaption>
-                       </figure>
+                        </figure>
                     </div>
                     <div class="col-6 col-md-4 p-0">
                         <figure class="gallery__animation">
@@ -435,11 +437,11 @@
         </section><!--End News-->
     </main>
     <footer class="footer">
-        <div class="container">
+        <div class="container-fluid pl-0 pr-0">
             <div class="row">
-                <div class="col-12 col-lg-6 pl-0 pt-5 pt-md-0 pb-5 pb-md-0 pr-3 d-flex flex-column justify-content-center">
+                <div class="col-12 col-md-6 footer__information d-flex flex-column justify-content-center">
                     <h5>WP FESTIVAL MUSIC - Bogotá</h5>
-                    <p class="d-none d-md-block">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum.</p>
+                    <p class="d-none d-md-block mt-3">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum.</p>
                     <ul class="list-unstyled d-flex mt-3 justify-content-center justify-content-lg-start pl-3 pl-lg-0">
                         <li class="mr-4">
                             <a href="#">
