YV - Page WP Festival 1-RC

--- a/index.html
+++ b/index.html
@@ -29,11 +29,11 @@
                 </button>
                 <div class="collapse navbar-collapse justify-content-end" id="navbarNavAltMarkup">
                     <div class="navbar-nav text-center">
-                        <a class="nav-item nav-link active" href="#">WP Festival <span class="sr-only">(current)</span></a>
-                        <a class="nav-item nav-link" href="#">DJS</a>
-                        <a class="nav-item nav-link" href="#">Presentaciones</a>
-                        <a class="nav-item nav-link" href="#">Blog</a>
-                        <a class="nav-item nav-link" href="#">Contacto</a>
+                        <a class="nav-item nav-link active" href="wp-festival.html">WP Festival</a>
+                        <a class="nav-item nav-link" href="djs.html">DJS</a>
+                        <a class="nav-item nav-link" href="presentaciones.html">Presentaciones</a>
+                        <a class="nav-item nav-link" href="blog.html">Blog</a>
+                        <a class="nav-item nav-link" href="contacto.html">Contacto</a>
                     </div>
                 </div>
             </nav>
