Home: Agregamos font awesome

--- a/index.html
+++ b/index.html
@@ -7,10 +7,12 @@
     <title>Wp Festival Music Bogotá 2018</title>
     <link rel="stylesheet" href="css/bootstrap.css">
     <link href="https://fonts.googleapis.com/css?family=Kanit:300,400,500,700|Saira:300,400,500,700" rel="stylesheet">
+    <link rel="stylesheet" href="css/font-awesome.min.css">
     <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
     <h1>Hola Bogotá</h1>
+    <i class="fa fa-address-book-o icono-personalizado " aria-hidden="true"></i>
     <!-- Scripts -->
     <script src="js/jquery.min.js"></script>
     <script src="js/popper.min.js"></script>
