--- a/index.html
+++ b/index.html
@@ -11,8 +11,29 @@
     <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-    <h1>Hola Bogotá</h1>
-    <i class="fa fa-address-book-o icono-personalizado " aria-hidden="true"></i>
+    <header class="header">
+        <div class="container pt-1 pt-md-4">
+            <nav class="navbar navbar-expand-lg">
+                <a href="index.html" class="navbar-brand">
+                    <img src="img/logo-wp-festival.png" alt="WP Music Festival" class="img-fluid">
+                </a>
+                <button class="navbar-toggler js-custom-toggler custom-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarAltMarkup" aria-expanded="false" aria-label="Toggle Navigation">
+                    <span> </span>
+                    <span> </span>
+                    <span> </span>
+                </button>
+                <div class="collapse navbar-collapse justify-content-end" id="navbarNavAltMarkup">
+                    <div class="navbar-nav text-center">
+                        <a class="nav-link active" href="#">Wp Festival</a>
+                        <a class="nav-link" href="#">DJS</a>
+                        <a class="nav-link" href="#">Presentaciones</a>
+                        <a class="nav-link" href="#">Contacto</a>
+                        <a class="nav-link" href="#">Blog</a>
+                    </div>
+                </div>
+            </nav>
+        </div>
+    </header>
     <!-- Scripts -->
     <script src="js/jquery.min.js"></script>
     <script src="js/popper.min.js"></script>
