--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <!-- BEM: BLOCK ELEMENT MODI -->
     <header class="header">
         <div class="container pt-1 pt-md-4 header__top">
-            <nav class="navbar navbar-expand-lg">
+            <nav class="navbar navbar-expand-lg js-navbar">
                 <a href="index.html" class="navbar-brand">
                     <img src="img/logo-wp-festival.png" alt="WP Music Festival" class="img-fluid">
                 </a>
@@ -23,7 +23,7 @@
                     <span> </span>
                     <span> </span>
                 </button>
-                <div class="collapse navbar-collapse justify-content-end" id="navbarNavAltMarkup">
+                <div class="collapse navbar-collapse justify-content-end js-collapse" id="navbarNavAltMarkup">
                     <div class="navbar-nav text-center">
                         <a class="nav-link active" href="#">Wp Festival</a>
                         <a class="nav-link" href="#">DJS</a>
@@ -64,5 +64,14 @@
     <script src="js/jquery.min.js"></script>
     <script src="js/popper.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
+
+    <script>
+        $(document).ready(function(){
+            $('.js-custom-toggler').click(function(){
+                // $('.js-navbar').toggleClass('relative');
+                $('.js-collapse').addClass('navbar--absolute');
+            })
+        })
+    </script>
 </body>
 </html>
