Section DJS Beta

--- a/index.html
+++ b/index.html
@@ -169,8 +169,8 @@
                                 <figure>
                                     <img class="img-fluid" src="img/dj_alexio.png" alt="DJ">
                                     <figcaption>
-                                        <h5>DJ Alexio</h5>
-                                        <h6>Ambient Electronic</h6>
+                                        <h5 class="djs__name">DJ Alexio</h5>
+                                        <h6 class="djs__type">Electro hop</h6>
                                     </figcaption>
                                 </figure>
                             </li>
@@ -178,8 +178,8 @@
                                 <figure>
                                     <img class="img-fluid" src="img/dj_caroline.png" alt="DJ">
                                     <figcaption>
-                                        <h5>DJ Caroline</h5>
-                                        <h6>Ambient Electronic</h6>
+                                        <h5 class="djs__name">DJ Caroline</h5>
+                                        <h6 class="djs__type">Electro house</h6>
                                     </figcaption>
                                 </figure>
                             </li>
@@ -187,8 +187,8 @@
                                 <figure>
                                     <img class="img-fluid" src="img/dj_sabrina.png" alt="DJ">
                                     <figcaption>
-                                        <h5>DJ Sabrina</h5>
-                                        <h6>Ambient Electronic</h6>
+                                        <h5 class="djs__name">DJ Sabrina</h5>
+                                        <h6 class="djs__type">Grime music‎</h6>
                                     </figcaption>
                                 </figure>
                             </li>
@@ -196,8 +196,8 @@
                                 <figure>
                                     <img class="img-fluid" src="img/dj-caroline.jpg" alt="DJ">
                                     <figcaption>
-                                        <h5>DJ Caroline</h5>
-                                        <h6>Ambient Electronic</h6>
+                                        <h5 class="djs__name">DJ Caroline</h5>
+                                        <h6 class="djs__type">Trip hop‎</h6>
                                     </figcaption>
                                 </figure>
                             </li>
@@ -205,8 +205,8 @@
                                 <figure>
                                     <img class="img-fluid" src="img/dj-mager.jpg" alt="DJ">
                                     <figcaption>
-                                        <h5>DJ Mager</h5>
-                                        <h6>Ambient Electronic</h6>
+                                        <h5 class="djs__name">DJ Mager</h5>
+                                        <h6 class="djs__type">Future bass</h6>
                                     </figcaption>
                                 </figure>
                             </li>
@@ -214,8 +214,8 @@
                                 <figure>
                                     <img class="img-fluid" src="img/dj-krakenas.jpg" alt="DJ">
                                     <figcaption>
-                                        <h5>DJ Krakenas</h5>
-                                        <h6>Ambient Electronic</h6>
+                                        <h5 class="djs__name">DJ Krakenas</h5>
+                                        <h6 class="djs__type">Krautrock</h6>
                                     </figcaption>
                                 </figure>
                             </li>
@@ -223,8 +223,8 @@
                                 <figure>
                                     <img class="img-fluid" src="img/dj-murdock.jpg" alt="DJ">
                                     <figcaption>
-                                        <h5>DJ Murdock</h5>
-                                        <h6>Ambient Electronic</h6>
+                                        <h5 class="djs__name">DJ Murdock</h5>
+                                        <h6 class="djs__type">Synthwave</h6>
                                     </figcaption>
                                 </figure>
                             </li>
@@ -232,8 +232,8 @@
                                 <figure>
                                     <img class="img-fluid" src="img/dj-isabella.jpg" alt="DJ">
                                     <figcaption>
-                                        <h5>DJ Isabella</h5>
-                                        <h6>Ambient Electronic</h6>
+                                        <h5 class="djs__name">DJ Isabella</h5>
+                                        <h6 class="djs__type">Soundscape</h6>
                                     </figcaption>
                                 </figure>
                             </li>
