Add Animations picture DJS modal

--- a/djs.html
+++ b/djs.html
@@ -58,7 +58,10 @@
                 <article class="row djs__centerMobile">
                     <div class="col-md-6 col-lg-4 col-xl-3 mb-3 djs__items" data-toggle="modal" data-target="#exampleModal">
                         <figure>
-                            <img class="img-fluid" src="img/dj_alexio.png" alt="DJ">
+                            <div class="djs__animation">
+                                <img class="img-fluid" src="img/dj_alexio.png" alt="DJ">
+                                <a href="javascript:void(0);"></a>
+                            </div>                            
                             <figcaption class="mt-2">
                                 <h5 class="djs__name">DJ Alexio</h5>
                                 <h6 class="djs__type">Ambient Electronic</h6>
@@ -67,7 +70,10 @@
                     </div>
                     <div class="col-md-6 col-lg-4 col-xl-3 mb-3 djs__items" data-toggle="modal" data-target="#exampleModal">
                         <figure>
-                            <img class="img-fluid" src="img/dj_caroline.png" alt="DJ">
+                            <div class="djs__animation">
+                                <img class="img-fluid" src="img/dj_caroline.png" alt="DJ">
+                                <a href="javascript:void(0);"></a>
+                            </div>
                             <figcaption class="mt-2">
                                 <h5 class="djs__name">DJ Caroline</h5>
                                 <h6 class="djs__type">Ambient Electronic</h6>
@@ -76,7 +82,10 @@
                     </div>
                     <div class="col-md-6 col-lg-4 col-xl-3 mb-3 djs__items" data-toggle="modal" data-target="#exampleModal">
                         <figure>
-                            <img class="img-fluid" src="img/dj_sabrina.png" alt="DJ">
+                            <div class="djs__animation">
+                                <img class="img-fluid" src="img/dj_sabrina.png" alt="DJ">
+                                <a href="javascript:void(0);"></a>
+                            </div>
                             <figcaption class="mt-2">
                                 <h5 class="djs__name">DJ Sabrina</h5>
                                 <h6 class="djs__type">Ambient Electronic</h6>
@@ -85,7 +94,10 @@
                     </div>
                     <div class="col-md-6 col-lg-4 col-xl-3 mb-3 djs__items" data-toggle="modal" data-target="#exampleModal">
                         <figure>
-                            <img class="img-fluid" src="img/dj-caroline.jpg" alt="DJ">
+                            <div class="djs__animation">
+                                <img class="img-fluid" src="img/dj-caroline.jpg" alt="DJ">
+                                <a href="javascript:void(0);"></a>
+                            </div>
                             <figcaption class="mt-2">
                                 <h5 class="djs__name">DJ Caroline</h5>
                                 <h6 class="djs__type">Ambient Electronic</h6>
@@ -94,7 +106,10 @@
                     </div>
                     <div class="col-md-6 col-lg-4 col-xl-3 mb-3 djs__items" data-toggle="modal" data-target="#exampleModal">
                         <figure>
-                            <img class="img-fluid" src="img/dj-pepito.jpg" alt="DJ">
+                            <div class="djs__animation">
+                                <img class="img-fluid" src="img/dj-pepito.jpg" alt="DJ">
+                                <a href="javascript:void(0);"></a>
+                            </div>                            
                             <figcaption class="mt-2">
                                 <h5 class="djs__name">DJ Caroline</h5>
                                 <h6 class="djs__type">Asian Underground</h6>
@@ -103,7 +118,10 @@
                     </div>
                     <div class="col-md-6 col-lg-4 col-xl-3 mb-3 djs__items" data-toggle="modal" data-target="#exampleModal">
                         <figure>
-                            <img class="img-fluid" src="img/dj-isabella.jpg" alt="DJ">
+                            <div class="djs__animation">
+                                <img class="img-fluid" src="img/dj-isabella.jpg" alt="DJ">
+                                <a href="javascript:void(0);"></a>
+                            </div>
                             <figcaption class="mt-2">
                                 <h5 class="djs__name">DJ Sabrina</h5>
                                 <h6 class="djs__type">Dubtronica</h6>
@@ -112,7 +130,10 @@
                     </div>
                     <div class="col-md-6 col-lg-4 col-xl-3 mb-3 djs__items" data-toggle="modal" data-target="#exampleModal">
                         <figure>
-                            <img class="img-fluid" src="img/dj-krakenas.jpg" alt="DJ">
+                            <div class="djs__animation">
+                                <img class="img-fluid" src="img/dj-krakenas.jpg" alt="DJ">
+                                <a href="javascript:void(0);"></a>
+                            </div>
                             <figcaption class="mt-2">
                                 <h5 class="djs__name">DJ Caroline</h5>
                                 <h6 class="djs__type">Toytown techno</h6>
@@ -121,7 +142,10 @@
                     </div>
                     <div class="col-md-6 col-lg-4 col-xl-3 mb-3 djs__items" data-toggle="modal" data-target="#exampleModal">
                         <figure>
-                            <img class="img-fluid" src="img/dj-mager.jpg" alt="DJ">
+                            <div class="djs__animation">
+                                <img class="img-fluid" src="img/dj-mager.jpg" alt="DJ">
+                                <a href="javascript:void(0);"></a>
+                            </div>
                             <figcaption class="mt-2">
                                 <h5 class="djs__name">DJ Alexio</h5>
                                 <h6 class="djs__type">Vaporwave</h6>
