--- a/index.html
+++ b/index.html
@@ -1,65 +1,154 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Wp Festival Music Bogotá 2018</title>
     <link rel="stylesheet" href="css/bootstrap.css">
-    <link href="https://fonts.googleapis.com/css?family=Kanit:300,400,500,700|Saira:300,400,500,700" rel="stylesheet">
     <link rel="stylesheet" href="css/font-awesome.min.css">
+    <link href="https://fonts.googleapis.com/css?family=Kanit:300,400,500,700|Saira:300,400,500,700" rel="stylesheet">
+    <!-- Add the slick-theme.css if you want default styling -->
+    <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/gh/kenwheeler/slick@1.8.0/slick/slick.css" />
+    <!-- Add the slick-theme.css if you want default styling -->
+    <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/gh/kenwheeler/slick@1.8.0/slick/slick-theme.css" />
     <link rel="stylesheet" href="css/main.css">
+    <title>DJ-Tiestos</title>
 </head>
+
 <body>
-    <!-- BEM: BLOCK ELEMENT MODI -->
     <header class="header">
         <div class="container pt-1 pt-md-4 header__top">
-            <nav class="navbar navbar-expand-lg js-navbar">
-                <a href="index.html" class="navbar-brand">
-                    <img src="img/logo-wp-festival.png" alt="WP Music Festival" class="img-fluid">
+            <nav class="navbar navbar-expand-lg">
+                <a class="navbar-brand" href="index.html">
+                    <img class="img-fluid" src="img/logo-wp-festival.png" alt="WP Music Festival">
                 </a>
-                <button class="navbar-toggler js-custom-toggler custom-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarAltMarkup" aria-expanded="false" aria-label="Toggle Navigation">
+                <button class="navbar-toggler js-custom-toggler custom-toggler collapsed" type="button" data-toggle="collapse"
+                    data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false"
+                    aria-label="Toggle navigation">
                     <span> </span>
                     <span> </span>
                     <span> </span>
                 </button>
-                <div class="collapse navbar-collapse justify-content-end js-collapse" id="navbarNavAltMarkup">
+                <div class="collapse navbar-collapse justify-content-end" id="navbarNavAltMarkup">
                     <div class="navbar-nav text-center">
-                        <a class="nav-link active" href="#">Wp Festival</a>
-                        <a class="nav-link" href="#">DJS</a>
-                        <a class="nav-link" href="#">Presentaciones</a>
-                        <a class="nav-link" href="#">Contacto</a>
-                        <a class="nav-link" href="#">Blog</a>
+                        <a class="nav-item nav-link active" href="wp-festival.html">WP Festival</a>
+                        <a class="nav-item nav-link" href="djs.html">DJS</a>
+                        <a class="nav-item nav-link" href="presentaciones.html">Presentaciones</a>
+                        <a class="nav-item nav-link" href="blog.html">Blog</a>
+                        <a class="nav-item nav-link" href="contacto.html">Contacto</a>
                     </div>
                 </div>
             </nav>
         </div>
         <div class="container header__bottom">
-            <ul class="list-inline d-flex header__meta">
-                <li>
-                    <img src="img/icon_date.png" alt="Icon Date">
-                    <span>21 Sept 2018</span>
-                </li>
-                <li>
-                    <img src="img/icon_headphones.png" alt="Icon Date">
-                    <span>24 DJs</span>
-                </li>
-                <li>
-                    <img src="img/icon_ticket.png" alt="Icon Date">
-                    <span>300 Entradas</span>
-                </li>
+            <ul class="header__meta list-inline d-flex">
+                <li><img src="img/icon_date.png" alt="21 Sept 2018"> 21 Sept 2018</li>
+                <li><img src="img/icon_headphones.png" alt="24 Djs"> 24 Djs</li>
+                <li><img src="img/icon_ticket.png" alt="3000 Entradas"> 3000 Entradas</li>
             </ul>
             <div class="header__information">
-                <h2 class="mb-0 mt-4">
+                <h2>
                     <strong>WP</strong> Festival Music <strong>Bogotá</strong> 2018
                 </h2>
-                <p>Bogotá <strong>WP Festival Music</strong> es un Evento de música electrónica con Djs que estan dentro del <strong>Top 20</strong> en el mundo.</p>
+                <p class="mb-0 mt-4 mt-md-0 pl-3 pr-3 p-md-0">Bogotá <strong>WP Festival Music</strong> es un Evento de
+                    música electrónica con Djs que estan dentro del Top 20 en el mundo.
+                </p>
+                <p class="d-none d-md-block mt-0">Luces, buena música y los mejores Djs.</p>
                 <div class="header__btn">
-                    <a href="#" class="btn btn-primary">Comprar tickets</a>
+                    <a href="#" class="btn btn-primary btn-lg mt-5 mt-md-3">Comprar Tickets</a>
                 </div>
             </div>
         </div>
     </header>
+    <!--Header-->
+    <main class="main">
+        <section class="presentations sectionBorder sectionBorder--bottom">
+            <article class="container">
+                <h2 class="title title--white">Presentaciones</h2>
+                <p>Aquí encontrarás los detalles de las presentaciones horarios, djs, escenario y la posibilidad de
+                    comprar tickets</p>
+                <div class="presentations__details row mt-5">
+                    <div class="presentations__details--title col col-md-2">Hora</div>
+                    <div class="presentations__details--title col col-md-2">DJ</div>
+                    <div class="presentations__details--title col col-md-3 d-none d-lg-block"></div>
+                    <div class="presentations__details--title col col-md-2 d-none d-lg-block">Escenario</div>
+                    <div class="presentations__details--title col col-md-3">Ticket</div>
+                </div>
+                <!--Titulo de las presentaciones-->
+                <div class="presentations__details row align-items-center mt-3">
+                    <div class="presentations__details--information col col-md-2">22:00</div>
+                    <div class="presentations__details--information col col-md-2">Dj Monza</div>
+                    <div class="presentations__details--information col col-md-3 d-none d-lg-block">
+                        <img class="img-fluid" src="img/dj-kuramizagui-presentations.png" alt="Dj Kuramizagui" width="130"
+                            height="144">
+                    </div>
+                    <div class="presentations__details--information col col-md-2 d-none d-lg-block">Principal</div>
+                    <div class="presentations__details--information col col-md-3 d-flex">
+                        <a class="btn btn-primary  mr-3 d-none d-lg-block" href="#">Detalles</a>
+                        <a class="btn btn-primary" href="#">Tickets</a>
+                    </div>
+                </div>
+                <!--Descripción presentaciones-->
+                <div class="presentations__details row align-items-center mt-3">
+                    <div class="presentations__details--information col col-md-2">23:00</div>
+                    <div class="presentations__details--information col col-md-2">Kura</div>
+                    <div class="presentations__details--information col col-md-3 d-none d-lg-block">
+                        <img class="img-fluid" src="img/dj-kura-presentations.png" alt="Dj Kura" width="130" height="144">
+                    </div>
+                    <div class="presentations__details--information col col-md-2 d-none d-lg-block">Principal</div>
+                    <div class="presentations__details--information col col-md-3 d-flex ">
+                        <a class="btn btn-primary mr-3 d-none d-lg-block" href="#">Detalles</a>
+                        <a class="btn btn-primary" href="#">Tickets</a>
+                    </div>
+                </div>
+                <!--Descripción presentaciones-->
+                <div class="presentations__details row align-items-center mt-3">
+                    <div class="presentations__details--information col col-md-2">22:00</div>
+                    <div class="presentations__details--information col col-md-2">Dj Monza</div>
+                    <div class="presentations__details--information col col-md-3 d-none d-lg-block">
+                        <img class="img-fluid" src="img/dj-monza-presentations.png" alt="Dj Monza" width="130" height="144">
+                    </div>
+                    <div class="presentations__details--information col col-md-2 d-none d-lg-block">Principal</div>
+                    <div class="presentations__details--information col col-md-3 d-flex ">
+                        <a class="btn btn-primary mr-3 d-none d-lg-block" href="#">Detalles</a>
+                        <a class="btn btn-primary" href="#">Tickets</a>
+                    </div>
+                </div>
+                <!--Descripción presentaciones-->
+                <div class="presentations__details row align-items-center mt-3">
+                    <div class="presentations__details--information col col-md-2">22:00</div>
+                    <div class="presentations__details--information col col-md-2">Dj Torino</div>
+                    <div class="presentations__details--information col col-md-3 d-none d-lg-block">
+                        <img class="img-fluid" src="img/dj-torino-presentations.png" alt="Dj Torino" width="130" height="144">
+                    </div>
+                    <div class="presentations__details--information col col-md-2 d-none d-lg-block">Principal</div>
+                    <div class="presentations__details--information col col-md-3 d-flex ">
+                        <a class="btn btn-primary mr-3 d-none d-lg-block" href="#">Detalles</a>
+                        <a class="btn btn-primary" href="#">Tickets</a>
+                    </div>
+                </div>
+                <!--Descripción presentaciones-->
+                <div class="presentations__details row align-items-center mt-3">
+                    <div class="presentations__details--information col col-md-2">22:00</div>
+                    <div class="presentations__details--information col col-md-2">Dj Yan</div>
+                    <div class="presentations__details--information col col-md-3 d-none d-lg-block">
+                        <img class="img-fluid" src="img/dj-yan-presentations.png" alt="Dj Yan" width="130" height="144">
+                    </div>
+                    <div class="presentations__details--information col col-md-2 d-none d-lg-block">Principal</div>
+                    <div class="presentations__details--information col col-md-3 d-flex ">
+                        <a class="btn btn-primary mr-3 d-none d-lg-block" href="#">Detalles</a>
+                        <a class="btn btn-primary" href="#">Tickets</a>
+                    </div>
+                </div>
+                <!--Descripción presentaciones-->
+                <div class="row justify-content-center mt-5">
+                    <a class="btn btn-primary btn-lg" href="#" id="">Ver Todas</a>
+                </div>
+            </article>
+        </section>
+        <!--End Presentaciones-->
+    </main>
     <!-- Scripts -->
     <script src="js/jquery.min.js"></script>
     <script src="js/popper.min.js"></script>
